--- a/templates/base.html
+++ b/templates/base.html
@@ -7,20 +7,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <header>
-        <nav>
-            <h1><a href="{{ url_for('index') }}">Masquerade Awards</a></h1>
-        </nav>
-    </header>
-
     <main>
         {% block content %}{% endblock %}
     </main>
 
     <footer>
-        <p>&copy; 2025 Harcourts Dunn - Masquerade Awards Ceremony</p>
+        <a href="https://www.cbos.co.za">CBOS (PTY) LTD &copy; 2025</a>                
     </footer>
-
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% block scripts %}{% endblock %}
 </body>
